--- a/src/style/components/widget-weather.scss
+++ b/src/style/components/widget-weather.scss
@@ -2,6 +2,7 @@
     float: left;
     width: 300px;
     padding: 20px;
+    text-align: center;
     color: white;
     background-color: $mainColorFontColor;
     border-radius: 20px;
