:art: user can now press enter directly from the input text, the input get reset after each search and the city name displayed is currently displayed on the dashboard

--- a/src/style/components/data-dashboard.scss
+++ b/src/style/components/data-dashboard.scss
@@ -3,6 +3,14 @@
     padding: 20px;
     width: 80vw;
 
+    .city-name {
+        text-align: center;
+
+        span {
+            color: $tagsColor;
+        }
+    }
+
     .no-data {
         text-align: center;
     }
