:art: now display error if no city name enter or if the APi doesnt found a city

--- a/src/style/components/header.scss
+++ b/src/style/components/header.scss
@@ -45,5 +45,11 @@
             border-bottom: 1px solid white;
             margin-right: 14px;
         }
+
+        .err-msg {
+            font-size: 12px;
+            color: $tagsColor;
+            padding-top: 10px;
+        }
     }
 }
